recursion.lessons.recursion.tree.Tree.scala.error
Tree:10: error: not found: value angle
gauche(angle); recule(length)
       ^Tree:10: error: not found: value length
gauche(angle); recule(length)
                      ^